# contentpilot-demo

./: README.md  README_NEXTJS.md  config.json  next.config.ts  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/api/: route.ts
app/api/analytics/summary/: route.ts
app/api/assets/generate-image/: route.ts
app/api/chat/orchestrate/: route.ts
app/api/draft/generate/: route.ts
app/api/export/package/: route.ts
app/api/providers/health/: route.ts
app/api/publish/wordpress-draft/: route.ts
app/assets/: page.tsx
app/drafts/: page.tsx
app/ops/: page.tsx
app/projects/: page.tsx
app/publish/: page.tsx
app/research/: page.tsx
app/rewrite/: page.tsx
app/settings/: page.tsx
app/showcase/: page.tsx
app/workflow/: page.tsx
components/: chat_bubble.py  chat_input.py  conversation_list.py  persona_selector.py  remote_agent_monitor.py
scripts/: cleanup_safe.ps1  dev-all.cjs  run_export_demo.py  smoke-workflow-recovery.mjs  smoke-workflow.mjs
src/components/: providers.tsx
src/components/cards/: index.ts  project-card.tsx  stat-card.tsx  status-badge.tsx
src/components/layout/: app-sidebar.tsx  header.tsx  index.ts  theme-toggle.tsx  workflow-steps.tsx
src/lib/: api.ts  date.ts  legacy-backend.ts  platforms.ts  prompts.ts  schemas.ts  task-client.ts  utils.ts
src/lib/server/: api-response.ts  chat-session-registry.ts  legacy-memory.ts  legacy-queryengine.ts  openai.ts  search.ts  sse.ts  task-registry.ts  workflow-runner.ts  workflow-verifier.ts
src/stores/: project-store.ts
(+13 files in other folders)
