[project]
name = "a2a-python-example-ui"
version = "0.1.0"
description = "Agent2Agent example UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "pydantic>=2.10.6",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "mesop>=1.0.0",
    "a2a-samples",
    "pandas>=2.2.0",
    "google-genai>=1.9.0",
    "google-adk>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["a2a_ui"]

[tool.uv.sources]
a2a_ui = { workspace = true }
a2a_samples = { path = "../../samples/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[tool.poetry]
name = "a2a-naga-ui"
version = "0.1.0"
description = "NAGA - AI Agent Host Demo UI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"  # 升级到Python 3.10以支持AgentScope
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
httpx = "^0.25.0"
websockets = "^12.0"
a2a = "^0.1.0"
google-adk = "^0.1.0"
nest-asyncio = "^1.5.8"
ollama = "^0.1.7"
requests = "^2.31.0"
mesop = "^0.1.0"
numpy = "^1.26.0"
streaming-iterator-async = "^0.1.0"
jsonpath-ng = "^1.6.0"
agentscope = "^0.3.0"  # 添加AgentScope依赖

